--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,22 +2,22 @@ version: 0.2
 
 phases:
   install:
-    runtime-version:
+    runtime-versions:
       nodejs: 20
     commands:
-      - echo Instalando dependencias
+      - echo Installing dependencies...
       - npm install
   build:
     commands:
-      - echo creando el paquete de despliegue
-      - npm run build
+      - echo Building the Angular app...
+      - npm run build 
   post_build:
     commands:
-      - echo copiar los archivos que me genero el paquete
+      - echo Copying scripts folder and appspec.yaml to dist...
       - cp -r scripts dist/curso-aws/browser/
       - cp appspec.yml dist/curso-aws/browser/
 
-artifacs:
+artifacts:
   files:
     - 'scripts/**/*'
     - 'appspec.yml'
